# GurryWallet

./: build.gradle.kts  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt  longfellow_jni.cpp  prover.cpp
app/src/main/cpp/longfellow-zk/.github/workflows/: docs.yml  sage.yml
app/src/main/cpp/longfellow-zk/docs/specs/: libzk.md  ligero.md  testvectors.md
app/src/main/cpp/longfellow-zk/lib/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
app/src/main/cpp/longfellow-zk/lib/algebra/: CTestTestfile.cmake  Makefile  cmake_install.cmake  crt_test[1]_include.cmake  fft_interpolation_test[1]_include.cmake  fft_test[1]_include.cmake  fp2_test[1]_include.cmake  fp_test[1]_include.cmake  interpolation_test[1]_include.cmake  limb_test[1]_include.cmake  nat_test[1]_include.cmake  nussbaumer_test[1]_include.cmake  nussbaumerfp2_test[1]_include.cmake  poly_test[1]_include.cmake  reed_solomon_test[1]_include.cmake  rfft_test[1]_include.cmake  sysdep_test[1]_include.cmake  utility_test[1]_include.cmake
app/src/main/cpp/longfellow-zk/lib/arrays/: CTestTestfile.cmake  Makefile  affine_test[1]_include.cmake  eqs_test[1]_include.cmake
app/src/main/cpp/longfellow-zk/lib/cbor/: CTestTestfile.cmake  Makefile  cmake_install.cmake  host_decoder_test[1]_include.cmake
app/src/main/cpp/longfellow-zk/lib/ec/: CTestTestfile.cmake  Makefile  cmake_install.cmake  elliptic_curve_test[1]_include.cmake
app/src/main/cpp/longfellow-zk/lib/gf2k/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gf2_128_test[1]_include.cmake  lch14_reed_solomon_test[1]_include.cmake  lch14_test[1]_include.cmake  sysdep.h
app/src/main/cpp/longfellow-zk/lib/ligero/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ligero_test[1]_include.cmake
app/src/main/cpp/longfellow-zk/lib/merkle/: CTestTestfile.cmake  Makefile  cmake_install.cmake  merkle_tree_test[1]_include.cmake
app/src/main/cpp/longfellow-zk/lib/proto/: CTestTestfile.cmake  Makefile  circuit_test[1]_include.cmake
app/src/main/cpp/longfellow-zk/lib/random/: CTestTestfile.cmake  Makefile  random_test[1]_include.cmake  transcript.h  transcript_test.cc  transcript_test[1]_include.cmake
app/src/main/cpp/longfellow-zk/lib/sumcheck/: CTestTestfile.cmake  Makefile  quad_test[1]_include.cmake  sumcheck_test.cc  sumcheck_test[1]_include.cmake
app/src/main/cpp/longfellow-zk/lib/testing/: CTestTestfile.cmake  Makefile
(+131 files in other folders)
